2010-10-14  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/pc/startup.S (bypass_table): Use 0x1b explicitly
	rather than 0x1b.
	(grub_console_getkey): Use correct jae opcode rather than ja.

2010-10-12  Robert Millan  <rmh@gnu.org>

	* util/grub-mkconfig.in: Merge `GRUB_DISABLE_LINUX_RECOVERY' and
	`GRUB_DISABLE_NETBSD_RECOVERY' into a single `GRUB_DISABLE_RECOVERY'
	variable.  All references updated.

	* util/grub.d/10_kfreebsd.in: Support recovery boot entries.

2010-10-08  Vladimir Serbinenko  <phcoder@gmail.com>

	Correctly distinguish mdraid flavours.

	* grub-core/disk/raid.c (grub_raid_getname) [GRUB_UTIL]: New function.
	(insert_array): New argument raid.
	* include/grub/disk.h (grub_disk_dev) [GRUB_UTIL]: New member raidname.
	* include/grub/raid.h (grub_raid_array) [GRUB_UTIL]: New member driver.
	* util/grub-probe.c (probe): PRint raidname instead of plainly "mdraid".

2010-10-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/pc/startup.S (grub_console_getkey): Fix incorrect
	handling of special keys.

2010-10-02  Aleš Nesrsta <starous@volny.cz>

	* include/grub/scsi.h (grub_make_scsi_id): Fix incorrect usgae of
	GRUB_SCSI_ID_BUS_SHIFT instead of GRUB_SCSI_ID_LUN_SHIFT.

2010-10-02  Aleš Nesrsta <starous@volny.cz>

	* grub-core/bus/usb/ohci.c (GRUB_OHCI_TDS): Increase.
	* grub-core/bus/usb/uhci.c (N_TD): New definition. All previous implicit
	users updated.
	* grub-core/bus/usb/usbtrans.c (grub_usb_bulk_setup_readwrite):
	Use right endpoint when querying descriptor.

2010-10-01  Vladimir Serbinenko  <phcoder@gmail.com>

	Clear out 0x80 color bit on EFI.
	Tested by: decoder
	Reported by: decoder and meta tech.

	* grub-core/term/efi/console.c (grub_console_standard_color): Removed.
	(grub_console_setcolorstate): Clear out 0x80 bit.
	Use GRUB_TERM_DEFAULT_STANDARD_COLOR.
	(grub_console_output): Use GRUB_TERM_DEFAULT_NORMAL_COLOR.
	Use GRUB_TERM_DEFAULT_HIGHLIGHT_COLOR.
